# addresskr

./: README.md  pyproject.toml
addresskr/: KIKcd_B.20260301.csv  KIKcd_B.20260301.xlsx  KIKmix.20260301.xlsx  __init__.py  jusogokr.py  법정동코드 전체자료.txt
tests/: test_parse.py
